--- a/TaflWeb/TaflWeb.csproj
+++ b/TaflWeb/TaflWeb.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Classes\" />
+    <Folder Include="Models\AI\" />
+  </ItemGroup>
+
 </Project>
