--- a/TaflWeb/TaflWeb.csproj
+++ b/TaflWeb/TaflWeb.csproj
@@ -5,37 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Content\attacktile1.bmp" />
-    <None Remove="Content\attacktile2.bmp" />
-    <None Remove="Content\attacktile3.bmp" />
-    <None Remove="Content\attacktile4.bmp" />
-    <None Remove="Content\deftile1.bmp" />
-    <None Remove="Content\deftile2.bmp" />
-    <None Remove="Content\deftile3.bmp" />
-    <None Remove="Content\deftile4.bmp" />
-    <None Remove="Content\throne.bmp" />
-    <None Remove="Content\tile1.bmp" />
-    <None Remove="Content\tile2.bmp" />
-    <None Remove="Content\tile3.bmp" />
-    <None Remove="Content\tile4.bmp" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Content\attacktile1.bmp" />
-    <Content Include="Content\attacktile2.bmp" />
-    <Content Include="Content\attacktile3.bmp" />
-    <Content Include="Content\attacktile4.bmp" />
-    <Content Include="Content\deftile1.bmp" />
-    <Content Include="Content\deftile2.bmp" />
-    <Content Include="Content\deftile3.bmp" />
-    <Content Include="Content\deftile4.bmp" />
-    <Content Include="Content\throne.bmp" />
-    <Content Include="Content\tile1.bmp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\tile2.bmp" />
-    <Content Include="Content\tile3.bmp" />
-    <Content Include="Content\tile4.bmp" />
+    <None Remove="wwwroot\Images\attacktile1.bmp" />
+    <None Remove="wwwroot\Images\attacktile2.bmp" />
+    <None Remove="wwwroot\Images\attacktile3.bmp" />
+    <None Remove="wwwroot\Images\attacktile4.bmp" />
+    <None Remove="wwwroot\Images\deftile1.bmp" />
+    <None Remove="wwwroot\Images\deftile2.bmp" />
+    <None Remove="wwwroot\Images\deftile3.bmp" />
+    <None Remove="wwwroot\Images\deftile4.bmp" />
+    <None Remove="wwwroot\Images\throne.bmp" />
+    <None Remove="wwwroot\Images\tile1.bmp" />
+    <None Remove="wwwroot\Images\tile2.bmp" />
+    <None Remove="wwwroot\Images\tile3.bmp" />
+    <None Remove="wwwroot\Images\tile4.bmp" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,6 +27,48 @@
 
   <ItemGroup>
     <Folder Include="Models\AI\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\Images\attacktile1.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\attacktile2.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\attacktile3.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\attacktile4.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\deftile1.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\deftile2.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\deftile3.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\deftile4.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\throne.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\tile1.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\tile2.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\tile3.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Images\tile4.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
