--- a/TaflWeb/TaflWeb.csproj
+++ b/TaflWeb/TaflWeb.csproj
@@ -42,6 +42,9 @@
     <Content Update="wwwroot\Images\attacktile4.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\Images\blueopal.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\Images\blueopal.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
