Rules page added

--- a/TaflWeb/TaflWeb.csproj
+++ b/TaflWeb/TaflWeb.csproj
@@ -82,6 +82,9 @@
     <Content Update="wwwroot\Images\rightborder.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\Images\shield.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\Images\throne.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
